added a few proofs and observations. very unhappy with notation. especially the one of the multipath split

--- a/code/simulation/SplittingStrategies.ipynb
+++ b/code/simulation/SplittingStrategies.ipynb
@@ -10617,7 +10617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10630,70 +10630,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capacities: [25, 15, 5]\n",
-      "amount to send: 0  split:  [1, 0, 0] probability: 0.962\n",
-      "amount to send: 1  split:  [2, 0, 0] probability: 0.923\n",
-      "amount to send: 2  split:  [3, 0, 0] probability: 0.885\n",
-      "amount to send: 3  split:  [4, 0, 0] probability: 0.846\n",
-      "amount to send: 4  split:  [5, 0, 0] probability: 0.808\n",
-      "amount to send: 5  split:  [6, 0, 0] probability: 0.769\n",
-      "amount to send: 6  split:  [7, 0, 0] probability: 0.731\n",
-      "amount to send: 7  split:  [8, 0, 0] probability: 0.692\n",
-      "amount to send: 8  split:  [9, 0, 0] probability: 0.654\n",
-      "amount to send: 9  split:  [10, 0, 0] probability: 0.615\n",
-      "amount to send: 10  split:  [10, 1, 0] probability: 0.577\n",
-      "amount to send: 11  split:  [11, 1, 0] probability: 0.541\n",
-      "amount to send: 12  split:  [12, 1, 0] probability: 0.505\n",
-      "amount to send: 13  split:  [12, 2, 0] probability: 0.471\n",
-      "amount to send: 14  split:  [13, 2, 0] probability: 0.438\n",
-      "amount to send: 15  split:  [13, 3, 0] probability: 0.406\n",
-      "amount to send: 16  split:  [14, 3, 0] probability: 0.375\n",
-      "amount to send: 17  split:  [14, 4, 0] probability: 0.346\n",
-      "amount to send: 18  split:  [14, 5, 0] probability: 0.317\n",
-      "amount to send: 19  split:  [15, 5, 0] probability: 0.291\n",
-      "amount to send: 20  split:  [16, 5, 0] probability: 0.264\n",
-      "amount to send: 21  split:  [16, 6, 0] probability: 0.240\n",
-      "amount to send: 22  split:  [17, 6, 0] probability: 0.216\n",
-      "amount to send: 23  split:  [17, 7, 0] probability: 0.195\n",
-      "amount to send: 24  split:  [18, 7, 0] probability: 0.173\n",
-      "amount to send: 25  split:  [18, 8, 0] probability: 0.154\n",
-      "amount to send: 26  split:  [18, 9, 0] probability: 0.135\n",
-      "amount to send: 27  split:  [19, 9, 0] probability: 0.118\n",
-      "amount to send: 28  split:  [20, 9, 0] probability: 0.101\n",
-      "amount to send: 29  split:  [20, 10, 0] probability: 0.087\n",
-      "amount to send: 30  split:  [21, 10, 0] probability: 0.072\n",
-      "amount to send: 31  split:  [21, 10, 1] probability: 0.060\n",
-      "amount to send: 32  split:  [21, 11, 1] probability: 0.050\n",
-      "amount to send: 33  split:  [22, 11, 1] probability: 0.040\n",
-      "amount to send: 34  split:  [22, 12, 1] probability: 0.032\n",
-      "amount to send: 35  split:  [22, 12, 2] probability: 0.026\n",
-      "amount to send: 36  split:  [23, 12, 2] probability: 0.019\n",
-      "amount to send: 37  split:  [23, 12, 3] probability: 0.014\n",
-      "amount to send: 38  split:  [23, 13, 3] probability: 0.011\n",
-      "amount to send: 39  split:  [24, 13, 3] probability: 0.007\n",
-      "amount to send: 40  split:  [24, 14, 3] probability: 0.005\n",
-      "amount to send: 41  split:  [24, 14, 4] probability: 0.003\n",
-      "amount to send: 42  split:  [25, 14, 4] probability: 0.002\n",
-      "amount to send: 43  split:  [25, 15, 4] probability: 0.001\n",
-      "amount to send: 44  split:  [25, 15, 5] probability: 0.000\n"
+      "capacities: [101, 51]\n",
+      "amount to send: 0  split:  [1, 0] probability: 0.990\n",
+      "amount to send: 1  split:  [2, 0] probability: 0.980\n",
+      "amount to send: 2  split:  [3, 0] probability: 0.971\n",
+      "amount to send: 3  split:  [4, 0] probability: 0.961\n",
+      "amount to send: 4  split:  [5, 0] probability: 0.951\n",
+      "amount to send: 5  split:  [6, 0] probability: 0.941\n",
+      "amount to send: 6  split:  [7, 0] probability: 0.931\n",
+      "amount to send: 7  split:  [8, 0] probability: 0.922\n",
+      "amount to send: 8  split:  [9, 0] probability: 0.912\n",
+      "amount to send: 9  split:  [10, 0] probability: 0.902\n",
+      "amount to send: 10  split:  [11, 0] probability: 0.892\n",
+      "amount to send: 11  split:  [12, 0] probability: 0.882\n",
+      "amount to send: 12  split:  [13, 0] probability: 0.873\n",
+      "amount to send: 13  split:  [14, 0] probability: 0.863\n",
+      "amount to send: 14  split:  [15, 0] probability: 0.853\n",
+      "amount to send: 15  split:  [16, 0] probability: 0.843\n",
+      "amount to send: 16  split:  [17, 0] probability: 0.833\n",
+      "amount to send: 17  split:  [18, 0] probability: 0.824\n",
+      "amount to send: 18  split:  [19, 0] probability: 0.814\n",
+      "amount to send: 19  split:  [20, 0] probability: 0.804\n",
+      "amount to send: 20  split:  [21, 0] probability: 0.794\n",
+      "amount to send: 21  split:  [22, 0] probability: 0.784\n",
+      "amount to send: 22  split:  [23, 0] probability: 0.775\n",
+      "amount to send: 23  split:  [24, 0] probability: 0.765\n",
+      "amount to send: 24  split:  [25, 0] probability: 0.755\n",
+      "amount to send: 25  split:  [26, 0] probability: 0.745\n",
+      "amount to send: 26  split:  [27, 0] probability: 0.735\n",
+      "amount to send: 27  split:  [28, 0] probability: 0.725\n",
+      "amount to send: 28  split:  [29, 0] probability: 0.716\n",
+      "amount to send: 29  split:  [30, 0] probability: 0.706\n",
+      "amount to send: 30  split:  [31, 0] probability: 0.696\n",
+      "amount to send: 31  split:  [32, 0] probability: 0.686\n",
+      "amount to send: 32  split:  [33, 0] probability: 0.676\n",
+      "amount to send: 33  split:  [34, 0] probability: 0.667\n",
+      "amount to send: 34  split:  [35, 0] probability: 0.657\n",
+      "amount to send: 35  split:  [36, 0] probability: 0.647\n",
+      "amount to send: 36  split:  [37, 0] probability: 0.637\n",
+      "amount to send: 37  split:  [38, 0] probability: 0.627\n",
+      "amount to send: 38  split:  [39, 0] probability: 0.618\n",
+      "amount to send: 39  split:  [40, 0] probability: 0.608\n",
+      "amount to send: 40  split:  [41, 0] probability: 0.598\n",
+      "amount to send: 41  split:  [42, 0] probability: 0.588\n",
+      "amount to send: 42  split:  [43, 0] probability: 0.578\n",
+      "amount to send: 43  split:  [44, 0] probability: 0.569\n",
+      "amount to send: 44  split:  [45, 0] probability: 0.559\n",
+      "amount to send: 45  split:  [46, 0] probability: 0.549\n",
+      "amount to send: 46  split:  [47, 0] probability: 0.539\n",
+      "amount to send: 47  split:  [48, 0] probability: 0.529\n",
+      "amount to send: 48  split:  [49, 0] probability: 0.520\n",
+      "amount to send: 49  split:  [50, 0] probability: 0.510\n",
+      "amount to send: 50  split:  [51, 0] probability: 0.500\n",
+      "amount to send: 51  split:  [51, 1] probability: 0.490\n",
+      "amount to send: 52  split:  [51, 2] probability: 0.481\n",
+      "amount to send: 53  split:  [52, 2] probability: 0.471\n",
+      "amount to send: 54  split:  [53, 2] probability: 0.462\n",
+      "amount to send: 55  split:  [53, 3] probability: 0.453\n",
+      "amount to send: 56  split:  [53, 4] probability: 0.443\n",
+      "amount to send: 57  split:  [54, 4] probability: 0.434\n",
+      "amount to send: 58  split:  [55, 4] probability: 0.425\n",
+      "amount to send: 59  split:  [55, 5] probability: 0.416\n",
+      "amount to send: 60  split:  [56, 5] probability: 0.408\n",
+      "amount to send: 61  split:  [56, 6] probability: 0.399\n",
+      "amount to send: 62  split:  [56, 7] probability: 0.390\n",
+      "amount to send: 63  split:  [57, 7] probability: 0.382\n",
+      "amount to send: 64  split:  [58, 7] probability: 0.373\n",
+      "amount to send: 65  split:  [58, 8] probability: 0.365\n",
+      "amount to send: 66  split:  [59, 8] probability: 0.357\n",
+      "amount to send: 67  split:  [59, 9] probability: 0.349\n",
+      "amount to send: 68  split:  [59, 10] probability: 0.340\n",
+      "amount to send: 69  split:  [60, 10] probability: 0.333\n",
+      "amount to send: 70  split:  [61, 10] probability: 0.325\n",
+      "amount to send: 71  split:  [61, 11] probability: 0.317\n",
+      "amount to send: 72  split:  [62, 11] probability: 0.309\n",
+      "amount to send: 73  split:  [62, 12] probability: 0.302\n",
+      "amount to send: 74  split:  [63, 12] probability: 0.294\n",
+      "amount to send: 75  split:  [63, 13] probability: 0.287\n",
+      "amount to send: 76  split:  [64, 13] probability: 0.279\n",
+      "amount to send: 77  split:  [64, 14] probability: 0.272\n",
+      "amount to send: 78  split:  [65, 14] probability: 0.265\n",
+      "amount to send: 79  split:  [65, 15] probability: 0.258\n",
+      "amount to send: 80  split:  [66, 15] probability: 0.251\n",
+      "amount to send: 81  split:  [66, 16] probability: 0.244\n",
+      "amount to send: 82  split:  [66, 17] probability: 0.238\n",
+      "amount to send: 83  split:  [67, 17] probability: 0.231\n",
+      "amount to send: 84  split:  [68, 17] probability: 0.224\n",
+      "amount to send: 85  split:  [68, 18] probability: 0.218\n",
+      "amount to send: 86  split:  [69, 18] probability: 0.212\n",
+      "amount to send: 87  split:  [69, 19] probability: 0.205\n",
+      "amount to send: 88  split:  [69, 20] probability: 0.199\n",
+      "amount to send: 89  split:  [70, 20] probability: 0.193\n",
+      "amount to send: 90  split:  [71, 20] probability: 0.187\n",
+      "amount to send: 91  split:  [71, 21] probability: 0.181\n",
+      "amount to send: 92  split:  [72, 21] probability: 0.175\n",
+      "amount to send: 93  split:  [72, 22] probability: 0.170\n",
+      "amount to send: 94  split:  [72, 23] probability: 0.164\n",
+      "amount to send: 95  split:  [73, 23] probability: 0.159\n",
+      "amount to send: 96  split:  [74, 23] probability: 0.153\n",
+      "amount to send: 97  split:  [74, 24] probability: 0.148\n",
+      "amount to send: 98  split:  [74, 25] probability: 0.143\n",
+      "amount to send: 99  split:  [75, 25] probability: 0.137\n",
+      "amount to send: 100  split:  [76, 25] probability: 0.132\n"
      ]
     }
    ],
    "source": [
-    "cs =[25,15,5]\n",
-    "prev_best = [0,0,0]\n",
+    "cs =[101,51]\n",
+    "prev_best = [0,0]\n",
     "print(\"capacities: {}\".format(cs))\n",
-    "for a in range(45):\n",
+    "for a in range(101):\n",
     "    best = 0\n",
     "    best_i = 0\n",
-    "    for i in range(3):\n",
+    "    for i in range(2):\n",
     "        prev_best[i]+=1\n",
     "        p = prob(prev_best,cs)\n",
     "        if p >best:\n",
